--- a/src/main/resources/plugins.config
+++ b/src/main/resources/plugins.config
@@ -2,7 +2,7 @@
 # #%L
 # Sp8LifToMemento plugin for ImageJ.
 # %%
-# Copyright (C) 2023 Jan Niklas Hansen, Emma Lundberg lab (https://ell-core.stanford.edu/)
+# Copyright (C) 2023-2024 Jan Niklas Hansen, Emma Lundberg lab (https://ell-core.stanford.edu/)
 # %%
 # This program is free software: you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as
@@ -22,8 +22,8 @@
 # Name: TifChannels_to_HPA_PNG_JPEG_Main_JNH
 
 # Author: Jan Niklas Hansen
-# Version: 0.0.3
+# Version: 0.0.4
 # Date: 2023/08/07
 # Requires: ImageJ/FIJI
 
-Plugins>ELL-Plugins, "TifChannels to HPA-PNG-JPEG (v0.0.3)", tifCs2hpaPngJpeg_jnh.TifCs_to_HPA_PNG_JPEG_Main
+Plugins>ELL-Plugins, "TifChannels to HPA-PNG-JPEG (v0.0.4)", tifCs2hpaPngJpeg_jnh.TifCs_to_HPA_PNG_JPEG_Main
